[tool.pytest.ini_options]
addopts = [
  "--color=yes",
  "--durations=0",
  "--strict-markers",
  "--doctest-modules",
]
filterwarnings = [
  "ignore::DeprecationWarning",
  "ignore::UserWarning",
]
log_cli = "True"
markers = [
  "slow: slow tests",
]
minversion = "6.0"
testpaths = "tests/"

[tool.coverage.report]
exclude_lines = [
    "pragma: nocover",
    "raise NotImplementedError",
    "raise NotImplementedError()",
    "if __name__ == .__main__.:",
]

[tool.poetry]
name = "lightning-hydra-template"
version = "0.1.0"
description = ""
authors = ["Aleksander Obuchowski <aleksander.obuchowski@media-press.tv>"]
readme = "README.md"
packages = [{include = "lightning_hydra_template"}]

[tool.poetry.dependencies]
python = "^3.10"
lightning = "^2.0.4"
torchmetrics = "^0.11.4"
hydra-core = "^1.3.2"
hydra-colorlog = "^1.2.0"
hydra-optuna-sweeper = "^1.2.0"
torch = {version = "^2.1.0.dev20230623+cu121", platform = "linux", source = "torch"}
pyrootutils = "^1.0.4"
torchvision = {version = "^0.16.0.dev20230623+cu121", platform = "linux", source = "torch"}
pre-commit = "^3.3.3"
rich = "^13.4.2"
pytest = "^7.4.0"

[[tool.poetry.source]]
name = "torch"
url = " https://download.pytorch.org/whl/nightly/cu121"
priority = "supplemental"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
